--- a/styles/popup.css
+++ b/styles/popup.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     /* Color Theme Basic */
     --color-A: #F29F05;
     --color-B: #F28705;
@@ -20,6 +20,7 @@
     --color-C1: #F9A107;
     --color-C2: #DB7407;
     --color-C3: #DB3607;
+    --color-C5: #FF904D;
     --raw-C3: 219, 54, 7;
     --color-C4: #F91A07;
     /* Color Theme D */
@@ -32,16 +33,17 @@
     --color-E2: #737373;
     --color-E3: #FFFFFF;
     --color-E4: #D9D9D9;
-  
+
     --Header-size: 57px;
     --Footer-size: 45px;
     --HeaderFooter: calc(var(--Header-size) + var(--Footer-size));
     --Page-padding: 0 20px var(--Navbar-size) 20px;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-  
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
 }
-html{
-    background-color: var(--color-C);
+
+html {
+    background-color: var(--color-C5);
 }
 
 button {
@@ -52,28 +54,58 @@ button {
     cursor: pointer;
     font-size: 12vw;
 }
-.menu_button{
+
+.menu_button {
     padding: auto;
     border-radius: 100rem;
 }
-.menu_button:active{
+
+.menu_button:active {
     background-color: var(--color-C1);
 }
-h2{
+
+h2 {
     font-size: 10vw;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
     color: var(--color-E);
 }
-.logo{
+
+.logo {
     border-radius: 100rem;
     background-color: var(--color-E);
     width: 100px;
     padding: 25px;
-    margin: 50px;
+    margin: 0 50px 20px 50px;
 }
 
-.menu{
+.menu {
     display: flex;
     justify-content: space-around;
+}
+
+.title {
+    font-family: "Lato", sans-serif;
+    font-size: 2.5rem;
+}
+
+.menu_icon {
+    width: 30px;
+}
+
+.sign_in_btn {
+    background-color: var(--color-E);
+    color: black;
+    border-radius: 2%;
+    padding: 12.25px;
+    margin: 10px;
+    min-width: 200px;
+    font-size: 1.0rem;
+    font-family: "Lato", sans-serif;
+    box-shadow: 5px 5px #d3d3d3;
+}
+
+.container {
+    text-align: center;
+    margin-bottom: 25px;
 }
