--- a/styles/popup.css
+++ b/styles/popup.css
@@ -1,7 +1,7 @@
 @import url("root.css");
 
 html {
-    background-color: var(--color-C5);
+    background-color: var(--color-C);
 }
 
 button {
@@ -31,7 +31,7 @@ h2 {
 
 .logo {
     border-radius: 100rem;
-    background: var(--color-E);
+    background: linear-gradient(-45deg, var(--color-A), var(--color-B),var(--color-C), var(--color-D));
     background-size: 400% 400%;
     width: 100px;
     padding: 25px;
@@ -54,17 +54,20 @@ h2 {
 }
 
 .sign_in_btn {
-    background-color: var(--color-E);
-    color: black;
-    border-radius: 2%;
+    background-color: var(--color-E4);
+    font-size: 3rem;
+    font-weight: bold;
+    color: var(--color-C);
+    border-radius: 12vw;
     padding: 12.25px;
     margin: 10px;
     min-width: 200px;
     font-size: 1.0rem;
-    font-family: "Lato", sans-serif;
-    box-shadow: 5px 5px #d3d3d3;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
+.sign_in_btn:hover{
+    color: var(--color-C4);
+}
 .container {
     text-align: center;
     margin-bottom: 25px;
