--- a/styles/popup.css
+++ b/styles/popup.css
@@ -1,34 +1,37 @@
 @import url("root.css");
+@import url("icons.css");
 
 html {
     background-color: var(--color-C);
 }
-
+a {
+    text-decoration: none;
+  }
 button {
     text-decoration: none;
     outline: none;
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 12vw;
 }
-
 .menu_button {
-    padding: auto;
-    border-radius: 100rem;
+    display: flex;
+    justify-content: center;
 }
-
-.menu_button:active {
-    background-color: var(--color-C1);
+.menu_icon{
+    font-size: 3rem;
+    color: var(--color-E3);
+    opacity: 0.8;
 }
-
+.menu_button:active  .menu_icon{
+    opacity: 1;
+}
 h2 {
     font-size: 10vw;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
     color: var(--color-E3);
 }
-
 .logo {
     border-radius: 100rem;
     background: linear-gradient(-45deg, var(--color-A), var(--color-B),var(--color-C), var(--color-D));
@@ -49,12 +52,8 @@ h2 {
     font-size: 2.5rem;
 }
 
-.menu_icon {
-    width: 30px;
-}
-
 .sign_in_btn {
-    background-color: var(--color-E4);
+    background-color: var(--color-E3);
     font-size: 3rem;
     font-weight: bold;
     color: var(--color-C);
@@ -72,7 +71,6 @@ h2 {
     text-align: center;
     margin-bottom: 25px;
 }
-
 @keyframes gradient {
     0% {
         background-position: 0% 50%;
