--- a/styles/root.css
+++ b/styles/root.css
@@ -39,4 +39,5 @@
     --HeaderFooter: calc(var(--Header-size) + var(--Footer-size));
     --Page-padding: 0 20px var(--Navbar-size) 20px;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+    --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
