--- a/styles/root.css
+++ b/styles/root.css
@@ -2,7 +2,7 @@
     /* Color Theme Basic */
     --color-A: #F29F05;
     --color-B: #F28705;
-    --color-C: #F25C05;
+    --color-C: #f25c05;
     --color-D: #D93D04;
     --color-E: #F2F2F2;
     /* Color Theme A */
