--- a/styles/popup.css
+++ b/styles/popup.css
@@ -2,17 +2,21 @@
 @import url("icons.css");
 /* from pages */
 @import url("../pages/styles/login.css");
+@import url("../pages/styles/review.css");
 /* from specific global components that tends to be in almost all pages*/
 @import url("../components/styles/menu.css");
 
 html {
     color: var(--color-E3);
     background: linear-gradient(-45deg, var(--color-A), var(--color-B), var(--color-C), var(--color-D));
-    padding: 22.5vw 12.5vw;
 }
 
 a {
     text-decoration: none;
+}
+
+.main-container {
+    padding: 22.5vw 12.5vw;
 }
 
 button {
