Primer version diseño

--- a/popup/main/popup.css
+++ b/popup/main/popup.css
@@ -4,9 +4,11 @@
 @import url("../pages/styles/login.css");
 @import url("../pages/styles/start.css");
 @import url("../pages/styles/PageInfo.css");
+@import url("../pages/styles/Account.css");
 /* from specific global components that tends to be in almost all pages*/
 @import url("../components/styles/menu.css");
 @import url("../components/styles/slider.css");
+@import url("../components/styles/SettingsInput.css");
 /* https://www.behance.net/gallery/34266495/Iksan-Music-Party-concert-2016-by-greenplugged?tracking_source=search_projects%7Cblue%20night */
 html {
     color: var(--color-E3);
@@ -100,6 +102,9 @@ h2 {
     position: absolute;
     top: 12;
     left: 12;
+}
+#backButton >span{
+    font-size: 2rem;
 }
 
 .container {
