--- a/search/main.css
+++ b/search/main.css
@@ -31,7 +31,62 @@
     text-align: center;
     margin: 0;
 }
+/* Search Style */
 
+.g{
+    display:flex; 
+    flex-flow: row wrap;
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* flex-wrap: wrap; */
+}
+.g > div:nth-of-type(2){
+    max-width: 82%;
+    /* background-color: orange; */
+}
+.surfiSearch{
+    max-width: 16%;
+    display: flex;
+    font-family: Helvetica, sans-serif;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0.5% 1% 0.5% 0;
+}
+.searchCategory{
+    display: flex;
+    justify-content: center;
+    border-radius: 1rem;  
+    background-color: green;
+}
+.searchCategoryTitle{
+    color: var(--color-E3);
+    margin: 0;
+    padding: 1% 3%;
+}
+.searchParagraph{
+    font-size: 0.8rem;
+    margin: 0 1%;
+    line-height: 1rem;
+}
+.searchDataContainer{
+    display: flex;
+    font-size: 1rem;
+    justify-content: space-around;
+}
+.searchData{
+    font-size: 1.2rem;
+    margin: 0;
+    line-height: 1.5rem;
+}
+.veracity p{
+  color: var(--color-B);
+}
+.calification p{
+  font-weight: bold;
+}
+
+
+/* Search Style */
 
 @media screen and (min-width: 768px){
 
@@ -40,4 +95,20 @@
         width: 1.3rem;
     }
 }
+/* @media screen and (max-width: 768px){
+    .FCIUXc{
+        max-width: 45vw;
+    }
+}
 
+
+@media screen and (max-width: 1440px){
+    .FCIUXc{
+        /*  max-width: 35vw;
+    }
+} */
+
+/* .FCIUXc{
+    background-color: aqua;
+    max-width: 32vw;
+} */
