--- a/search/main.css
+++ b/search/main.css
@@ -42,7 +42,6 @@
 }
 .g > div:nth-of-type(2){
     max-width: 82%;
-    /* background-color: orange; */
 }
 .surfiSearch{
     max-width: 16%;
@@ -56,8 +55,32 @@
     display: flex;
     justify-content: center;
     border-radius: 1rem;  
-    background-color: green;
 }
+.Social{
+    background-color: rgb(18, 203, 203);
+}
+.Entretenimiento{
+    background-color: rgb(135, 126, 0);
+}
+.Noticias{
+    background-color: rgb(255, 0, 38);
+}
+.Opinion{
+    background-color: rgb(156, 18, 66);
+}
+.Comercio{
+    background-color: rgb(7, 138, 0);
+}
+.Academico{
+    background-color: rgb(0, 110, 255);
+}
+.Tecnologia{
+    background-color: rgb(251, 177, 49);
+}
+.Productividad{
+    background-color: rgb(172, 44, 184);
+}
+
 .searchCategoryTitle{
     color: var(--color-E3);
     margin: 0;
