--- a/popup/main/popup.css
+++ b/popup/main/popup.css
@@ -17,10 +17,6 @@ html {
     background: linear-gradient(-45deg, var(--color-A), var(--color-B), var(--color-C), var(--color-D));
 }
 
-body{
-    /* background-color: whitesmoke; */
-}
-
 a {
     text-decoration: none;
 }
@@ -28,7 +24,7 @@ a {
 .page-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: 450px;
     width: 320px;
