--- a/popup/pages/styles/PageInfo.css
+++ b/popup/pages/styles/PageInfo.css
@@ -1,75 +1,90 @@
-@property --p{
+@property --p {
   syntax: '<number>';
   inherits: true;
   initial-value: 0;
 }
-.pie-container{
-    display: flex;
-}
-.category{
-    justify-content: center;
-    background-color: wheat;
-    font-size: 3rem;
-    color: var(--color-C);
-    border-radius: 12vw;
-    padding: 12.25px 23px;
-    margin: 12.5px;
-    font-size: 1.0rem;
-}
-.category p{
-    text-align: center;
-    font-weight: bold;
-    font-family: var(--font-family);
-}
-.pie {
-  --p:20;
-  --b:1rem;
-  --c:var(--color-C);
-  --w:6rem;
-  width:var(--w);
-  aspect-ratio:1;
-  position:relative;
-  display:inline-grid;
-  margin:5px;
-  place-content:center;
-  font-size:25px;
-  font-weight:bold;
-  font-family:sans-serif;
-}
-.pie:before,.pie:after {
-  content:"";
-  position:absolute;
-  border-radius:50%;
-}
-.pie:before {
-  inset:0;
-  background:
-    radial-gradient(farthest-side,var(--c) 98%,#0000) top/var(--b) var(--b) no-repeat,
-    conic-gradient(var(--c) calc(var(--p)*1%),#0000 0);
-  -webkit-mask:radial-gradient(farthest-side,#0000 calc(99% - var(--b)),#000 calc(100% - var(--b)));
-          mask:radial-gradient(farthest-side,#0000 calc(99% - var(--b)),#000 calc(100% - var(--b)));
-}
-.pie:after {
-  inset:calc(50% - var(--b)/2);
-  background:var(--c);
-  transform:rotate(calc(var(--p)*3.6deg)) translateY(calc(50% - var(--w)/2));
-}
-.animate {
-  animation:p 1s .5s both;
-}
-.no-round:before {
-  background-size:0 0,auto;
-}
-.no-round:after {
-  content:none;
-}
-@keyframes p {
-  from{--p:0}
+
+.pie-container {
+  display: flex;
 }
 
-.summary_title{
+.category {
+  justify-content: center;
+  background-color: wheat;
+  font-size: 3rem;
+  color: var(--color-C);
+  border-radius: 12vw;
+  padding: 12.25px 23px;
+  margin: 12.5px;
+  font-size: 1.0rem;
+}
+
+.category p {
+  text-align: center;
+  font-weight: bold;
+  font-family: var(--font-family);
+}
+
+.pie {
+  --p: 20;
+  --b: 1rem;
+  --c: var(--color-C);
+  --w: 6rem;
+  width: var(--w);
+  aspect-ratio: 1;
+  position: relative;
+  display: inline-grid;
+  margin: 5px;
+  place-content: center;
+  font-size: 25px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.pie:before,
+.pie:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+}
+
+.pie:before {
+  inset: 0;
+  background:
+    radial-gradient(farthest-side, var(--c) 98%, #0000) top/var(--b) var(--b) no-repeat,
+    conic-gradient(var(--c) calc(var(--p)*1%), #0000 0);
+  -webkit-mask: radial-gradient(farthest-side, #0000 calc(99% - var(--b)), #000 calc(100% - var(--b)));
+  mask: radial-gradient(farthest-side, #0000 calc(99% - var(--b)), #000 calc(100% - var(--b)));
+}
+
+.pie:after {
+  inset: calc(50% - var(--b)/2);
+  background: var(--c);
+  transform: rotate(calc(var(--p)*3.6deg)) translateY(calc(50% - var(--w)/2));
+}
+
+.animate {
+  animation: p 1s .5s both;
+}
+
+.no-round:before {
+  background-size: 0 0, auto;
+}
+
+.no-round:after {
+  content: none;
+}
+
+@keyframes p {
+  from {
+    --p: 0
+  }
+}
+
+.summary_title {
   text-align: left;
 }
-.summary_text{
+
+.summary_text {
   text-align: center;
 }
