--- a/popup/components/styles/rating.css
+++ b/popup/components/styles/rating.css
@@ -1,7 +1,7 @@
 .rating >.rate {
+    margin: 0 0;
     float: left;
-    height: 46px;
-    padding: 0 10px;
+    padding: 0 0.7rem;
 }
 .rating >.rate:not(:checked) > input {
     position:absolute;
@@ -13,7 +13,7 @@
     overflow:hidden;
     white-space:nowrap;
     cursor:pointer;
-    font-size:30px;
+    font-size:2.5rem;
     color:rgb(255, 255, 255);
 }
 .rating >.rate:not(:checked) > label:before {
