--- a/popup/main/popup.css
+++ b/popup/main/popup.css
@@ -31,7 +31,7 @@ a {
 .page-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     height: 450px;
     width: 320px;
