--- a/popup/pages/styles/review.css
+++ b/popup/pages/styles/review.css
@@ -26,10 +26,15 @@
     border-radius: 1rem;
     font-size: 1rem;
 	appearance: none;
+    text-align: center;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 }
+.SurfiDropdown:focus-visible{
+	outline: none;
+}
 .SurfiDropdown  option{
+    text-align: center;
     background-color: var(--color-B);
     color: var(--color-E3);
 }
