--- a/popup/pages/styles/login.css
+++ b/popup/pages/styles/login.css
@@ -41,6 +41,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: scroll;
 }
 
 .SignInComponent_form {
@@ -68,7 +69,7 @@
 .SignInComponent_SingUp {
     margin: 15px 0 15px 0;
     transition: color ease 500ms;
-    color: white
+    color: white;
 }
 
 .SignInComponent_SingUp:hover {
@@ -92,4 +93,33 @@
     .SignInComponent_User-logo {
         width: 10vw;
     }
+}
+
+.alert {
+    padding: 10px;
+    background-color: #686868;
+    color: white;
+    opacity: 0;
+    transition: opacity 0.6s;
+    margin-bottom: 0px;
+    border-radius: 1rem;
+  }
+  
+.alert.success {background-color: #04AA6D;}
+.alert.info {background-color: #2196F3;}
+.alert.warning {background-color: #ff9800;}
+  
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+.closebtn:hover {
+color: black;
 }
