Implementado full back en pageinfo

--- a/popup/main/popup.css
+++ b/popup/main/popup.css
@@ -13,6 +13,7 @@
 @import url("../components/styles/slider.css");
 @import url("../components/styles/SettingsInput.css");
 @import url("../components/styles/rating.css");
+@import url("../components/styles/pageInfoRating.css");
 
 /* https://www.behance.net/gallery/34266495/Iksan-Music-Party-concert-2016-by-greenplugged?tracking_source=search_projects%7Cblue%20night */
 html {
