--- a/styles/root.css
+++ b/styles/root.css
@@ -20,7 +20,6 @@
     --color-C1: #F9A107;
     --color-C2: #DB7407;
     --color-C3: #DB3607;
-    --raw-C3: 219, 54, 7;
     --color-C4: #F91A07;
     --color-C5: #FF904D;
     /* Color Theme D */
@@ -54,7 +53,7 @@
 .Periodismo{
     background-color: #9162BD !important;
 }
-.Investigacion{
+.Research{
     background-color: #43AA8B !important;
 }
 .Organizacion{
