--- a/styles/root.css
+++ b/styles/root.css
@@ -56,10 +56,10 @@
 .Research{
     background-color: #43AA8B !important;
 }
-.Organizacion{
+.Business{
     background-color: #274F73 !important;
 }
-.Comercio{
+.SHOPPING{
     background-color: #FA5089 !important;
 }
 .Not_rated{
