--- a/popup/main/popup.css
+++ b/popup/main/popup.css
@@ -67,12 +67,12 @@ h3 {
 
 /* scrollbar style */
 ::-webkit-scrollbar {
-    width: 0.1rem;
+    width: 0rem;
     /* display: none; */
 }
 
 ::-webkit-scrollbar-track {
-    border: 1px solid var(--color-B);
+    border: none;
 }
 
 ::-webkit-scrollbar-thumb {
