--- a/popup/pages/styles/login.css
+++ b/popup/pages/styles/login.css
@@ -41,10 +41,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: scroll;
+    overflow:scroll;
 }
 
 .SignInComponent_form {
+    overflow: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -55,6 +56,10 @@
     box-shadow: 0 2px 5px 1px rgba(64, 60, 67, .16);
     background-color: var(--color-A);
     border-radius: 1rem;
+}
+
+#SignUpForm > div:nth-of-type(1){
+    margin-top: 12rem;
 }
 
 .SignInComponent_User-logo {
