--- a/styles/root.css
+++ b/styles/root.css
@@ -50,7 +50,7 @@
 .Entretenimiento{
     background-color: #D14143 !important;
 }
-.Periodismo{
+.News{
     background-color: #9162BD !important;
 }
 .Research{
