--- a/styles/root.css
+++ b/styles/root.css
@@ -41,13 +41,13 @@
     --font-family: 'Goldplay', Helvetica, sans-serif;
 }
 
-.Herramienta{
-    background-color: #ffff00  !important;
+.Productivity{
+    background-color: #1d9f03  !important;
 }
 .Social{
     background-color: #F8961E !important;
 }
-.Entretenimiento{
+.Entertainment{
     background-color: #D14143 !important;
 }
 .News{
