--- a/search/main.css
+++ b/search/main.css
@@ -59,7 +59,7 @@
 .searchCategory{
     display: flex;
     justify-content: center;
-    border-radius: 1rem;  
+    border-radius: 0.3rem;  
 }
 
 
@@ -67,6 +67,8 @@
     font-size: 0.8rem;
     color: var(--color-E3);
     margin: 0;
+    margin-left:0.2rem;
+    margin-right:0.2rem;
     padding: 1% 3%;
 }
 .searchParagraph{
