--- a/search/main.css
+++ b/search/main.css
@@ -59,7 +59,7 @@
 .searchCategory{
     display: flex;
     justify-content: center;
-    border-radius: 0.3rem;  
+    border-radius: 0.5rem;  
 }
 
 
@@ -70,6 +70,7 @@
     margin-left:0.2rem;
     margin-right:0.2rem;
     padding: 1% 3%;
+    white-space: nowrap;
 }
 .searchParagraph{
     font-size: 0.8rem;
