--- a/styles/root.css
+++ b/styles/root.css
@@ -59,9 +59,12 @@
 .Business{
     background-color: #274F73 !important;
 }
-.SHOPPING{
+.Shopping{
     background-color: #FA5089 !important;
 }
-.Not_rated{
+.Not_Rated{
     background-color: #7f7f7f !important;
+}
+.ACADEMIC{
+    background-color: #ae0000 !important;
 }
