--- a/popup/pages/styles/login.css
+++ b/popup/pages/styles/login.css
@@ -51,7 +51,7 @@
     align-items: center;
 }
 
-.SignInComponent_form {
+.ContentBox {
     overflow: auto;
     display: flex;
     flex-direction: column;
