Revert "Arreglos Generales"
This reverts commit e45ff974d3467a464402b4f70a5d74910ecc374a.

--- a/popup/pages/styles/login.css
+++ b/popup/pages/styles/login.css
@@ -51,7 +51,7 @@
     align-items: center;
 }
 
-.ContentBox {
+.SignInComponent_form {
     overflow: auto;
     display: flex;
     flex-direction: column;
