--- a/styles/root.css
+++ b/styles/root.css
@@ -59,12 +59,9 @@
 .Business{
     background-color: #274F73 !important;
 }
-.Shopping{
+.SHOPPING{
     background-color: #FA5089 !important;
 }
-.Not_Rated{
+.Not_rated{
     background-color: #7f7f7f !important;
-}
-.ACADEMIC{
-    background-color: #ae0000 !important;
 }
