--- a/popup/components/styles/pageInfoRating.css
+++ b/popup/components/styles/pageInfoRating.css
@@ -11,6 +11,7 @@
     overflow:hidden;
     white-space:nowrap;
     cursor:pointer;
+    line-height: 2.2rem;
     font-size:2.5rem;
     color:var(--color-E3);
     opacity: 0.3;
